# LazyIterator

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  Tuprules.tup  main.cpp
build-clang/: tup.config
build-gcc/: tup.config
build-travis/: tup.config
demo/: CMakeLists.txt  Tupfile  main.cpp
include/: LazyStrIterator.hpp  adaptors.hpp  algorithm.hpp  detail.hpp  ph.hpp  range.hpp
include/adaptor/: filtered.hpp  map.hpp
ut/: CMakeLists.txt  Tupfile  testMain.cpp
ut/tests/: LazyStrIteratorTest.cpp  adaptorTests.cpp  algorithmTest.cpp  lazyStrIteratorTest.cpp  mainTest.cpp  untilTest.cpp
